# neon

./: settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/com/example/native_neon/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.c
app/src/main/java/com/example/native_neon/: MainActivity.java  NativeLib.java  RSNativeActivity.java
app/src/main/res/layout/: activity_rs_native.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/native_neon/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
